.alignCenter for <img>. Issue #317

--- a/www/www/static/css/content.css
+++ b/www/www/static/css/content.css
@@ -32,6 +32,12 @@
 	margin: 10px 0 10px 10px;
 }
 
+.parsedContent img.alignCenter
+{
+	display: block;
+	margin: 10px auto;
+}
+
 .parsedContent a {
 	color: #666;
 }
